--- a/Accenture.html
+++ b/Accenture.html
@@ -68,7 +68,7 @@
 <div class="container">
 
 <ul class="nav-menu">
-	<li><a href="index.html">HOME</a></li>
+	<li><a href="index.html" targrt="_blank">HOME</a></li>
 	<li><a href="index.html#hiring" target="_blank">JOB"S</a></li>
 <li><a href="#" target="_blank">PROMO CODE'S</a></li>
 <li><a href="#" target="_blank">COUPONS</a></li>
@@ -90,7 +90,7 @@
 <li><a href="#" target="_blank">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 </ul>
