--- a/TCS.html
+++ b/TCS.html
@@ -90,7 +90,7 @@
 <li><a href="#" target="_blank">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 </ul>
@@ -249,7 +249,7 @@ As of July 2022, Tata Consultancy Services has over 606,331 employees all over t
 <div class="col-md-6 col-md-push-6">
 <ul class="footer-nav">
 <li><a href="index.html" target="_blank">Home</a></li>
-<li><a href="#" target="_blank"></a>>About Us</a></li>
+<li><a href="about us.html" target="_blank"></a>>About Us</a></li>
 <li><a href="#" target="_blank"></a>>Contacts</a></li>
 <li><a href="#" target="_blank"></a>>Advertise</a></li>
 <li><a href="#" target="_blank"></a>>Privacy</a></li>
