--- a/apple.html
+++ b/apple.html
@@ -88,7 +88,7 @@
 <li><a href="#" target="_blank">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 </ul>
@@ -251,7 +251,7 @@
 <div class="col-md-6 col-md-push-6">
 <ul class="footer-nav">
 <li><a href="index.html" target="_blank">Home</a></li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 <li><a href="#" target="_blank">Privacy</a></li>
