--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <li><a href="#">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#">About Us</a></li>
+<li><a href="about us.html">About Us</a></li>
 <li><a href="#">Contacts</a></li>
 <li><a href="#">Advertise</a></li>
 </ul>
@@ -689,7 +689,7 @@
 <div class="col-md-6 col-md-push-6">
 <ul class="footer-nav">
 <li><a href="#index.html" target="_blank">Home</a></li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 <li><a href="#" target="_blank">Privacy</a></li>
