--- a/infosys-blog-post.html
+++ b/infosys-blog-post.html
@@ -89,7 +89,7 @@
 <li><a href="#" target="_blank">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 </ul>
@@ -485,7 +485,7 @@ The 48 analysts offering 12-month price forecasts for Infosys Ltd have a median 
 <div class="col-md-6 col-md-push-6">
 <ul class="footer-nav">
 <li><a href="index.html" target="_blank">Home</a></li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 <li><a href="#" target="_blank">Privacy</a></li>
