--- a/wipro blog-post.html
+++ b/wipro blog-post.html
@@ -88,7 +88,7 @@
 <li><a href="#" target="_blank">COUPONS</a></li>
 </ul>
 </li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 </ul>
@@ -483,7 +483,7 @@ In March 2020, Hedera announced that Wipro would be joining their Governing Coun
 <div class="col-md-6 col-md-push-6">
 <ul class="footer-nav">
 <li><a href="index.html" target="_blank">Home</a></li>
-<li><a href="#" target="_blank">About Us</a></li>
+<li><a href="about us.html" target="_blank">About Us</a></li>
 <li><a href="#" target="_blank">Contacts</a></li>
 <li><a href="#" target="_blank">Advertise</a></li>
 <li><a href="#" target="_blank">Privacy</a></li>
